--- a/_posts/2014-02-22-devstack 安装教程.md
+++ b/_posts/2014-02-22-devstack 安装教程.md
@@ -2,8 +2,8 @@
 layout: post
 title: "devstack 安装教程"
 description: ""
-category: cloud computing
-tags: [openstack]
+category: [cloud, openstack]
+tags: [cloud, openstack, devstack]
 ---
 {% include JB/setup %}
 
