--- a/_posts/2014-02-22-devstack 安装教程.md
+++ b/_posts/2014-02-22-devstack 安装教程.md
@@ -1,8 +1,8 @@
----
+﻿---
 layout: post
 title: "devstack 安装教程"
 description: ""
-category: cloud, openstack
+category: "cloud, openstack"
 tags: [cloud, openstack, devstack]
 ---
 {% include JB/setup %}
