--- a/_posts/2014-02-22-devstack-.md
+++ b/_posts/2014-02-22-devstack-.md
@@ -1,56 +1,47 @@
 ---
 layout: post
-title: "devstack °²×°½Ì³Ì"
-description: ""
-category: 
-tags: []
----
-{% include JB/setup %}
-
----
-layout: post
-title: "devstack °²×°½Ì³Ì"
+title: "devstack å®‰è£…æ•™ç¨‹"
 description: ""
 category: "cloud, openstack"
 tags: [cloud, openstack, devstack]
 ---
 {% include JB/setup %}
 
-ÓÃdevstack×°OpenStackÓ¦¸ÃÊÇÃ¿¸öOpenStack³ÌĞòÔ±¿Ï¶¨×ö¹ıµÄÒ»¼şÊÂ£¬ÔÚÕâÀïÎÒÒ²ºÍ´ó¼Ò·ÖÏíÒ»ÏÂÎÒµÄ¾­Ñé¡£
+ç”¨devstackè£…OpenStackåº”è¯¥æ˜¯æ¯ä¸ªOpenStackç¨‹åºå‘˜è‚¯å®šåšè¿‡çš„ä¸€ä»¶äº‹ï¼Œåœ¨è¿™é‡Œæˆ‘ä¹Ÿå’Œå¤§å®¶åˆ†äº«ä¸€ä¸‹æˆ‘çš„ç»éªŒã€‚
 
-±¾½Ì³ÌÍ¨¹ıdevstack°²×°openstack havana°æ±¾¡£°²×°»·¾³ubuntu12.04
+æœ¬æ•™ç¨‹é€šè¿‡devstackå®‰è£…openstack havanaç‰ˆæœ¬ã€‚å®‰è£…ç¯å¢ƒubuntu12.04
 
-#»ñÈ¡devstack°²×°°ü
+#è·å–devstackå®‰è£…åŒ…
 
-´ÓgithubÏÂÔØdevstack£¬ÀıÈçÔÚ±¾½Ì²ÄÖĞÎÒÃÇÏÂÔØµ½/home/ÎÄ¼ş¼ĞÏÂ£¬×¢Òâ²»ÒªÏÂÔØµ½ÀıÈç/root/ÏÂ£¬·ñÔò´ı»á°²×°»áÓĞÈ¨ÏŞÎÊÌâ£¬±È½ÏÂé·³¡£
+ä»githubä¸‹è½½devstackï¼Œä¾‹å¦‚åœ¨æœ¬æ•™æä¸­æˆ‘ä»¬ä¸‹è½½åˆ°/home/æ–‡ä»¶å¤¹ä¸‹ï¼Œæ³¨æ„ä¸è¦ä¸‹è½½åˆ°ä¾‹å¦‚/root/ä¸‹ï¼Œå¦åˆ™å¾…ä¼šå®‰è£…ä¼šæœ‰æƒé™é—®é¢˜ï¼Œæ¯”è¾ƒéº»çƒ¦ã€‚
 
 	cd /home/
 	git clone https://github.com/openstack-dev/devstack.git
 
-½øÈëdevstackÎÄ¼ş¼Ğ£¬ÇĞ»»µ½havana°æ±¾
+è¿›å…¥devstackæ–‡ä»¶å¤¹ï¼Œåˆ‡æ¢åˆ°havanaç‰ˆæœ¬
 
 	cd /home/devstack/
 	git checkout stable/havana
 
-#°²×°Ç°×¼±¸
+#å®‰è£…å‰å‡†å¤‡
 
-ÒòÎªdevstackÏÖÔÚ²»Ö§³ÖrootÓÃ»§°²×°¡£¿ÉÒÔÍ¨¹ı¹Ù·½¸øµÄ½Å±¾´´½¨stackÓÃ»§£¨¼ÇµÃÒªÓÃrootÔËĞĞ½Å±¾Å¶~£©£¬²¢¸ødevstackÎÄ¼ş¼ĞÈ¨ÏŞ777£¬Ê¡µÃÒÔºóÂé·³¡£
+å› ä¸ºdevstackç°åœ¨ä¸æ”¯æŒrootç”¨æˆ·å®‰è£…ã€‚å¯ä»¥é€šè¿‡å®˜æ–¹ç»™çš„è„šæœ¬åˆ›å»ºstackç”¨æˆ·ï¼ˆè®°å¾—è¦ç”¨rootè¿è¡Œè„šæœ¬å“¦~ï¼‰ï¼Œå¹¶ç»™devstackæ–‡ä»¶å¤¹æƒé™777ï¼Œçœå¾—ä»¥åéº»çƒ¦ã€‚
 
 	./tools/create-stack-user.sh
 	chmod -R 777 /home/devstack/
 	
-½øÈëdevstackÎÄ¼ş¼Ğ£¬
+è¿›å…¥devstackæ–‡ä»¶å¤¹ï¼Œ
 
 	cd devstack
 	
-¹úÄÚ°²×°devstackµÄÒ»´óÎÊÌâ¾ÍÊÇpipÔ´ºÍgithubÁ½¸öÍøÕ¾²»ÄÜÕı³£µÇÂ½£¬×î½ügithub»¹ËãÕı³££¨Èç¹û»¹ÊÇÁ¬²»ÉÏ£¬¿ÉÒÔÓÃCSDNµÄÔ´Ìæ´ú£©£¬pypi.python.orgÈ´ÒÀ¾É²»¸øÁ¦¡£ÏÂÃæÎÒÃÇĞŞ¸ÄpipÔ´£¬¸Ä³É¶¹°êµÄ£¬»¹Í¦ÎÈ¶¨µÄ¡£ÕâÀïÎÒÃÇÖ»ĞèÒªĞŞ¸Ä`install_pip.sh`ÎÄ¼ş£¬²¢²»ĞèÒªĞŞ¸Äpip.confÎÄ¼ş
+å›½å†…å®‰è£…devstackçš„ä¸€å¤§é—®é¢˜å°±æ˜¯pipæºå’Œgithubä¸¤ä¸ªç½‘ç«™ä¸èƒ½æ­£å¸¸ç™»é™†ï¼Œæœ€è¿‘githubè¿˜ç®—æ­£å¸¸ï¼ˆå¦‚æœè¿˜æ˜¯è¿ä¸ä¸Šï¼Œå¯ä»¥ç”¨CSDNçš„æºæ›¿ä»£ï¼‰ï¼Œpypi.python.orgå´ä¾æ—§ä¸ç»™åŠ›ã€‚ä¸‹é¢æˆ‘ä»¬ä¿®æ”¹pipæºï¼Œæ”¹æˆè±†ç“£çš„ï¼Œè¿˜æŒºç¨³å®šçš„ã€‚è¿™é‡Œæˆ‘ä»¬åªéœ€è¦ä¿®æ”¹`install_pip.sh`æ–‡ä»¶ï¼Œå¹¶ä¸éœ€è¦ä¿®æ”¹pip.confæ–‡ä»¶
 
 	vi /home/devstack/tools/install_pip.sh
 	PIP_TAR_URL=pypi.douban.com/packages/source/p/pip/pip-$INSTALL_PIP_VERSION.tar.gz
 
-#ĞŞ¸Ä`local.conf`ÎÄ¼ş
+#ä¿®æ”¹`local.conf`æ–‡ä»¶
 
-È·¶¨ĞèÒª°²×°µÄ×é¼ş¡£×î½üdevstack°ÑÅäÖÃÎÄ¼ş´Ó`localrc`¸Ä³ÉÁË`local.conf`£¬µ±È»±¾ÖÊÉÏÃ»ÓĞ±ä»¯¡£
+ç¡®å®šéœ€è¦å®‰è£…çš„ç»„ä»¶ã€‚æœ€è¿‘devstackæŠŠé…ç½®æ–‡ä»¶ä»`localrc`æ”¹æˆäº†`local.conf`ï¼Œå½“ç„¶æœ¬è´¨ä¸Šæ²¡æœ‰å˜åŒ–ã€‚
 
 	vi local.conf
 	
@@ -80,21 +71,21 @@ tags: [cloud, openstack, devstack]
 	LOG_COLOR=True
 	SCREEN_LOGDIR=/home/stack/logs
 
-#°²×°devstack
+#å®‰è£…devstack
 
-¸Äµ½stackÓÃ»§£¬ÔËĞĞ`stack.sh`ÎÄ¼ş£¬°²×°devstack
+æ”¹åˆ°stackç”¨æˆ·ï¼Œè¿è¡Œ`stack.sh`æ–‡ä»¶ï¼Œå®‰è£…devstack
 
 	su stack
 	/home/devstack/stack.sh
 
-È»ºó¾ÍµÈ×Å°²×°Íê³É°É¡£
+ç„¶åå°±ç­‰ç€å®‰è£…å®Œæˆå§ã€‚
 
-#°²×°³É¹¦
+#å®‰è£…æˆåŠŸ
 
-µÇÂ½µÄÃÜÂë¾ÍÊÇ`local.conf`ÀïÃæµÄ£¬devstackºÍÒ»°ã°²×°²»Ì«Ò»ÑùµÄµØ·½ÊÇµÇÂ½dashboardÊ±²»ĞèÒªÊäÈë`/dashboard`£¬Ö±½ÓÇÃIPµØÖ·¾ÍºÃÁË¡£
+ç™»é™†çš„å¯†ç å°±æ˜¯`local.conf`é‡Œé¢çš„ï¼Œdevstackå’Œä¸€èˆ¬å®‰è£…ä¸å¤ªä¸€æ ·çš„åœ°æ–¹æ˜¯ç™»é™†dashboardæ—¶ä¸éœ€è¦è¾“å…¥`/dashboard`ï¼Œç›´æ¥æ•²IPåœ°å€å°±å¥½äº†ã€‚
 
-½Ì³Ì¾Íµ½ÕâÀïÁË¡£Ğ»Ğ»£¡
+æ•™ç¨‹å°±åˆ°è¿™é‡Œäº†ã€‚è°¢è°¢ï¼
 
-²Î¿¼×ÊÁÏ£º
-1. [devstack](http://devstack.org/)¹ÙÍøºÍdevstackµÄ[github¿â](https://github.com/openstack-dev/devstack)
-2. ³ÂÉ³¿ËµÄ²©¿Í [devstack°²×°ºÍ²âÊÔ](http://www.chenshake.com/devstack-installation-and-testing/)
+å‚è€ƒèµ„æ–™ï¼š
+1. [devstack](http://devstack.org/)å®˜ç½‘å’Œdevstackçš„[githubåº“](https://github.com/openstack-dev/devstack)
+2. é™ˆæ²™å…‹çš„åšå®¢ [devstackå®‰è£…å’Œæµ‹è¯•](http://www.chenshake.com/devstack-installation-and-testing/)
