--- a/_posts/2014-02-22-devstack-.md
+++ b/_posts/2014-02-22-devstack-.md
@@ -2,7 +2,7 @@
 layout: post
 title: "devstack 安装教程"
 description: ""
-category: "cloud, openstack"
+category: cloud
 tags: [cloud, openstack, devstack]
 ---
 {% include JB/setup %}
