devstack multi-node

--- a/_posts/2014-02-25-devstack.md
+++ b/_posts/2014-02-25-devstack.md
@@ -1,20 +1,20 @@
 ---
 layout: post
-title: "¶à½ÚµãdevstackÅäÖÃ"
+title: "å¤šèŠ‚ç‚¹devstacké…ç½®"
 description: ""
 category: cloud
 tags: [cloud, openstack, devstack]
 ---
 {% include JB/setup %}
 
-±¾ÎÄ¼ÌĞøÉÏÒ»Æª[devstack °²×°½Ì³Ì](/_posts/2014-02-22-devstack-.md)£¬½éÉÜÈçºÎÓÃdevstackÅäÖÃ¶à½Úµãopenstack»·¾³¡£
+æœ¬æ–‡ç»§ç»­ä¸Šä¸€ç¯‡[devstack å®‰è£…æ•™ç¨‹](/_posts/2014-02-22-devstack-.md)ï¼Œä»‹ç»å¦‚ä½•ç”¨devstacké…ç½®å¤šèŠ‚ç‚¹openstackç¯å¢ƒã€‚
 
-°²×°»·¾³ubuntu12.04+OpenStack(havana)
+å®‰è£…ç¯å¢ƒubuntu12.04+OpenStack(havana)
 
-ÓÉÓÚÏÖÔÚneutron±È½Ï»ìÂÒ£¬ÔÚÕâÀïÎÒÓÃnova-network×öÍøÂç·şÎñ£¬²¢ÇÒ°²×°ÁËheat¡£µ«Ã»ÓĞ°²×°tempestºÍceilometer¡£¿ÉÒÔ°´ĞèÔöÉ¾×¢ÊÍ¡£
+ç”±äºç°åœ¨neutronæ¯”è¾ƒæ··ä¹±ï¼Œåœ¨è¿™é‡Œæˆ‘ç”¨nova-networkåšç½‘ç»œæœåŠ¡ï¼Œå¹¶ä¸”å®‰è£…äº†heatã€‚ä½†æ²¡æœ‰å®‰è£…tempestå’Œceilometerã€‚å¯ä»¥æŒ‰éœ€å¢åˆ æ³¨é‡Šã€‚
 
-#¿ØÖÆ½Úµã
-ÏÂÃæÊÇcontroller½ÚµãµÄÅäÖÃÎÄ¼ş¡£ÕâÀïÅäÖÃÁËprivateºÍpublicÁ½¸öÍøÂç¡£
+#æ§åˆ¶èŠ‚ç‚¹
+ä¸‹é¢æ˜¯controllerèŠ‚ç‚¹çš„é…ç½®æ–‡ä»¶ã€‚è¿™é‡Œé…ç½®äº†privateå’Œpublicä¸¤ä¸ªç½‘ç»œã€‚
 
 	vi devstack/local.conf
 	[[local|localrc]]
@@ -38,8 +38,8 @@ tags: [cloud, openstack, devstack]
 	FLOATING_RANGE=192.168.1.0/24
 	FIXED_RANGE=192.168.2.0/24
 
-#¼ÆËã½Úµã
-ÏÂÃæÊÇcompute½ÚµãµÄÅäÖÃÎÄ¼ş¡£ÆôÓÃÁËnova-compute,nova-networkÕâÁ½¸öÄ£¿é¡£
+#è®¡ç®—èŠ‚ç‚¹
+ä¸‹é¢æ˜¯computeèŠ‚ç‚¹çš„é…ç½®æ–‡ä»¶ã€‚å¯ç”¨äº†nova-compute,nova-networkè¿™ä¸¤ä¸ªæ¨¡å—ã€‚
 	
 	vi devstack/local.conf
 	[[local|localrc]]
@@ -76,13 +76,12 @@ tags: [cloud, openstack, devstack]
 	vncserver_proxyclient_address=9.186.106.17
 	vncserver_listen=0.0.0.0
 
-#¼¸µãËµÃ÷
+#å‡ ç‚¹è¯´æ˜ï¼š
 1. controller node IP:9.186.106.16, compute node IP: 9.186.106.17
-2. Ò»¶¨Òª´ò¿ªnovnc·şÎñ£¬ÁíÍâÔÚ¼ÆËã½ÚµãÅäÖÃnova.confÎÄ¼ş£¨Ò²¾ÍÊÇÔÚlocal.confÀïÃæ¼ÓÉÏ`[[post-config|$NOVA_CONF]]`ºóÃæÄÇ¶Î£©¡£·ñÔòdashboardÀïÃæµÄConsole»áÓĞÎÊÌâ¡£
-3. ÎÒµÄÅäÖÃÀï»¹¼ÓÈëÁËSimpleScheduler£¬Õâ¸öÆäÊµ¼Ó²»¼ÓÎŞËùÎ½£¬¿ÉÒÔ¸Ä³É×Ô¼ºĞèÒªµÄµ÷¶ÈÆ÷¡£
-4. ±È½ÏÁîÈË·Ñ½âµÄÊÇENABLED_SERVICESÀïÃæ°üº¬ÁËrabbit£¬ÕâÒ²¾ÍÒâÎ¶×ÅÔÚ¼ÆËã½ÚµãÉÏÒª°²×°rabbitmq¡£µ«ÊÇ×Ô¼º¶¯ÊÖ×°¹ıopenstackµÄÅóÓÑ¶¼ÖªµÀ£¬rabbitmqÖ»ĞèÒªÔÚ¿ØÖÆ½ÚµãÉÏ°²×°¼´¿É¡£ÕâÒ²ĞíÊÇÒòÎªqpidµÈÆäËûÏûÏ¢¶ÓÁĞ·şÎñÊÇĞèÒª°²×°ÔÚ¼ÆËã½ÚµãµÄ£¬ËùÒÔdevstack°ÑËüÍ³Ò»ÉèÖÃÁË¡£
+2. ä¸€å®šè¦æ‰“å¼€novncæœåŠ¡ï¼Œå¦å¤–åœ¨è®¡ç®—èŠ‚ç‚¹é…ç½®nova.confæ–‡ä»¶ï¼ˆä¹Ÿå°±æ˜¯åœ¨local.confé‡Œé¢åŠ ä¸Š`[[post-config|$NOVA_CONF]]`åé¢é‚£æ®µï¼‰ã€‚å¦åˆ™dashboardé‡Œé¢çš„Consoleä¼šæœ‰é—®é¢˜ã€‚
+3. æˆ‘çš„é…ç½®é‡Œè¿˜åŠ å…¥äº†SimpleSchedulerï¼Œè¿™ä¸ªå…¶å®åŠ ä¸åŠ æ— æ‰€è°“ï¼Œå¯ä»¥æ”¹æˆè‡ªå·±éœ€è¦çš„è°ƒåº¦å™¨ã€‚
+4. æ¯”è¾ƒä»¤äººè´¹è§£çš„æ˜¯ENABLED_SERVICESé‡Œé¢åŒ…å«äº†rabbitï¼Œè¿™ä¹Ÿå°±æ„å‘³ç€åœ¨è®¡ç®—èŠ‚ç‚¹ä¸Šè¦å®‰è£…rabbitmqã€‚ä½†æ˜¯è‡ªå·±åŠ¨æ‰‹è£…è¿‡openstackçš„æœ‹å‹éƒ½çŸ¥é“ï¼Œrabbitmqåªéœ€è¦åœ¨æ§åˆ¶èŠ‚ç‚¹ä¸Šå®‰è£…å³å¯ã€‚è¿™ä¹Ÿè®¸æ˜¯å› ä¸ºqpidç­‰å…¶ä»–æ¶ˆæ¯é˜Ÿåˆ—æœåŠ¡æ˜¯éœ€è¦å®‰è£…åœ¨è®¡ç®—èŠ‚ç‚¹çš„ï¼Œæ‰€ä»¥devstackæŠŠå®ƒç»Ÿä¸€è®¾ç½®äº†ã€‚
 
-
-²Î¿¼×ÊÁÏ£º
-1. devstackµÄ[github](https://github.com/openstack-dev/devstack)
+å‚è€ƒèµ„æ–™ï¼š
+1. devstackçš„[github](https://github.com/openstack-dev/devstack)
 2. devstack [Multi-Node Lab](http://devstack.org/guides/multinode-lab.html)
