--- a/_posts/2014-02-25-devstack.md
+++ b/_posts/2014-02-25-devstack.md
@@ -39,7 +39,7 @@ tags: [cloud, openstack, devstack]
 	FIXED_RANGE=192.168.2.0/24
 
 #计算节点
-下面是compute节点的配置文件。启用了nova-compute,nova-network这两个模块。
+下面是compute节点的配置文件。启用了nova-compute, nova-network这两个模块。
 	
 	vi devstack/local.conf
 	[[local|localrc]]
@@ -78,9 +78,23 @@ tags: [cloud, openstack, devstack]
 
 #几点说明：
 1. controller node IP:9.186.106.16, compute node IP: 9.186.106.17
-2. 一定要打开novnc服务，另外在计算节点配置nova.conf文件（也就是在local.conf里面加上`[[post-config|$NOVA_CONF]]`后面那段）。否则dashboard里面的Console会有问题。
+2. 一定要打开novnc服务，另外在计算节点配置`nova.conf`文件（也就是在`local.conf`里面加上`[[post-config|$NOVA_CONF]]`后面那段）。否则dashboard里面的Console会有问题。
 3. 我的配置里还加入了SimpleScheduler，这个其实加不加无所谓，可以改成自己需要的调度器。
 4. 比较令人费解的是ENABLED_SERVICES里面包含了rabbit，这也就意味着在计算节点上要安装rabbitmq。但是自己动手装过openstack的朋友都知道，rabbitmq只需要在控制节点上安装即可。这也许是因为qpid等其他消息队列服务是需要安装在计算节点的，所以devstack把它统一设置了。
+
+#Some Tips:
+1. 当机器重启后可以运行`rejoin-stack.sh`重启服务，可能会用到的两个命令是
+
+	script /dev/null
+	screen -r
+
+如果运行`stack.sh`则会把所有数据擦去重建。如果想更改配置，比如想把neutron换成nova-network，`unstack.sh`可以帮助重新搭建OpenStack。如果之前安装有问题，可以试试`clean.sh`。
+
+2. 安装完成后可以运行以下两个命令，获得权限：
+
+	source openrc admin admin
+	source openrc demo demo
+
 
 参考资料：
 1. devstack的[github](https://github.com/openstack-dev/devstack)
