--- a/_posts/2014-02-25-devstack.md
+++ b/_posts/2014-02-25-devstack.md
@@ -83,14 +83,14 @@ tags: [cloud, openstack, devstack]
 4. 比较令人费解的是ENABLED_SERVICES里面包含了rabbit，这也就意味着在计算节点上要安装rabbitmq。但是自己动手装过openstack的朋友都知道，rabbitmq只需要在控制节点上安装即可。这也许是因为qpid等其他消息队列服务是需要安装在计算节点的，所以devstack把它统一设置了。
 
 #Some Tips:
-1. 当机器重启后可以运行`rejoin-stack.sh`重启服务，可能会用到的两个命令是
+当机器重启后可以运行`rejoin-stack.sh`重启服务，可能会用到的两个命令是
 
 	script /dev/null
 	screen -r
 
 如果运行`stack.sh`则会把所有数据擦去重建。如果想更改配置，比如想把neutron换成nova-network，`unstack.sh`可以帮助重新搭建OpenStack。如果之前安装有问题，可以试试`clean.sh`。
 
-2. 安装完成后可以运行以下两个命令，获得权限：
+安装完成后可以运行以下两个命令，获得权限：
 	
 	source openrc admin admin
 	source openrc demo demo
