--- a/_posts/2014-12-31-anaconda.md
+++ b/_posts/2014-12-31-anaconda.md
@@ -13,9 +13,9 @@ tags: [python, Anaconda, PyCharm]
 装了[Anaconda](http://www.continuum.io/)，在PyCharm上配置好路径，妈妈再也不用担心我在Windows上写Python了。
 换Macbook Air的计划也可以顺利延期，不用剁手卖肾了。
 #言归正传，做个广告
-Anaconda包含了大部分流行的包。
+Anaconda包含了大部分流行的包,[链接在此](http://docs.continuum.io/anaconda/pkg-docs.html)。
 比如做数值分析：scipy, numpy，matplotlib，pandas这一个系列
- 自然语言处理：nltk
+自然语言处理：nltk
 机器学习：scikit-learn
 网络爬虫：Scrapy，beautiful-soup
 建网站的：django，flask，jinja2，tornado
